Class2/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  # priorityClassName: high-priority
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: 256Mi
        cpu: 1
      limits:
        memory: 1Gi
        cpu: 2
