Class2/allow-label.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-allow
spec:
  podSelector:
    matchLabels:
      team: qa
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              team: devops
#in default ns, open ingress traffic from pods that have label team: devops to pods that have label team: qa
