Class2/allow-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-allow-ns
spec:
  podSelector:
    matchLabels:
      team: devops
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
            matchLabels:
              dev: kube
#in default ns, open ingress traffic from pods that have labels team: devops 
#to ns that have label dev: kube
